--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -40,6 +40,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Update submodules
+      run: |
+        git submodule update --init --recursive
+        git submodule update --recursive --remote
+
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
       id: strings
