--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,41 +1,20 @@
 # This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
-name: CMake on multiple platforms
+name: CMake on Windows
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ $default-branch ]
+    paths:
+      - "Plugin/**"
+      - "shaders/**"
+      - ".gitmodules"
   pull_request:
-    branches: [ "master" ]
+    branches: [ $default-branch ]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
-      fail-fast: false
-
-      # Set up a matrix to run the following 3 configurations:
-      # 1. <Windows, Release, latest MSVC compiler toolchain on the default runner image, default generator>
-      # 2. <Linux, Release, latest GCC compiler toolchain on the default runner image, default generator>
-      # 3. <Linux, Release, latest Clang compiler toolchain on the default runner image, default generator>
-      #
-      # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
-      matrix:
-        os: [windows-latest]
-        build_type: [Release]
-        c_compiler: [gcc, clang, cl]
-        include:
-          - os: windows-latest
-            vcpkgCommitId: 'a7d99a5c3cd1456af023051d025a5643a2d6e79c'
-            c_compiler: cl
-            cpp_compiler: cl
-        exclude:
-          - os: windows-latest
-            c_compiler: gcc
-          - os: windows-latest
-            c_compiler: clang
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -59,7 +38,7 @@ jobs:
     - name: Configure vcpkg
       uses: lukka/run-vcpkg@v11
       with:
-        vcpkgGitCommitId: '${{ matrix.vcpkgCommitId }}'
+        vcpkgGitCommitId: 'a7d99a5c3cd1456af023051d025a5643a2d6e79c'
         vcpkgJsonGlob: '**/Plugin/vcpkg.json'
       
     - name: Configure CMake
@@ -67,12 +46,11 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        -DCMAKE_CXX_COMPILER=cl
+        -DCMAKE_C_COMPILER=cl
+        -DCMAKE_BUILD_TYPE=Release
         -S ${{ github.workspace }}/Plugin
         --preset=build-release-msvc-msvc
-
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
